# livex

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
feed/: admin.py  consumers.py  forms.py  models.py  routing.py  signals.py  tasks.py  urls.py  views.py
feed/migrations/: 0001_initial.py
feed/templates/feed/: index.html
livex/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
redis/: redis.conf
